[gd_scene load_steps=16 format=3 uid="uid://qbeqdmnh41d0"]

[ext_resource type="FontFile" uid="uid://c0tncv8pnqgq4" path="res://addons/material-design-icons/fonts/material_design_icons.ttf" id="3_7q1i4"]
[ext_resource type="FontFile" uid="uid://yj0t3tghbpke" path="res://Assets/UI/OperationNapalm-Regular.ttf" id="3_m0p65"]
[ext_resource type="Script" path="res://Scenes/MainScenes/GameScene.gd" id="5"]
[ext_resource type="Script" path="res://Scenes/MainScenes/UI.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://3ojeng56mfwk" path="res://Scenes/SupportScenes/ProgressCircle.tscn" id="6_6k1du"]
[ext_resource type="Script" path="res://addons/material-design-icons/nodes/MaterialButton.gd" id="6_rf8we"]
[ext_resource type="Texture2D" uid="uid://bva4iswwvta5d" path="res://addons/controller_icons/assets/xbox360/y.png" id="7_oh17e"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/TextureRect.gd" id="7_onet4"]
[ext_resource type="Script" path="res://addons/material-design-icons/nodes/MaterialIcon.gd" id="9_qcndx"]
[ext_resource type="Texture2D" uid="uid://coxp4sapp4g8n" path="res://addons/controller_icons/assets/xbox360/start.png" id="10_6cwio"]
[ext_resource type="Texture2D" uid="uid://bamrmda3in3qq" path="res://addons/controller_icons/assets/xbox360/lb.png" id="11_1ip31"]
[ext_resource type="Texture2D" uid="uid://cw2jo5xbteqdu" path="res://addons/controller_icons/assets/xbox360/rb.png" id="12_2yvu8"]
[ext_resource type="Script" path="res://Scenes/MainScenes/Camera.gd" id="12_3nie2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e1lhj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qmfo"]

[node name="GameScene" type="Node2D"]
script = ExtResource("5")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("6")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WaveContainer" type="PanelContainer" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.0
offset_right = 230.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_filter = 2

[node name="WaveWrapper" type="HBoxContainer" parent="UI/HUD/WaveContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="WaveLabel" type="Label" parent="UI/HUD/WaveContainer/WaveWrapper"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0p65")
theme_override_font_sizes/font_size = 36
text = "WAVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wave" type="Label" parent="UI/HUD/WaveContainer/WaveWrapper"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0p65")
theme_override_font_sizes/font_size = 36
text = "999"
vertical_alignment = 1

[node name="RemainingIcon" type="Label" parent="UI/HUD/WaveContainer/WaveWrapper"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7q1i4")
theme_override_font_sizes/font_size = 48
text = "󰋼"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_qcndx")
icon_name = "information"
icon_size = 48

[node name="Remaining" type="Label" parent="UI/HUD/WaveContainer/WaveWrapper"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0p65")
theme_override_font_sizes/font_size = 36
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWave" parent="UI/HUD/WaveContainer/WaveWrapper" instance=ExtResource("6_6k1du")]
visible = false
layout_mode = 2

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color(0, 0, 0, 0.470588)
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="M" type="MarginContainer" parent="UI/HUD/InfoBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 0

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar/M"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/M/H" groups=["ui_details"]]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0p65")
theme_override_font_sizes/font_size = 36
text = "$"
vertical_alignment = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/M/H" groups=["ui_details"]]
custom_minimum_size = Vector2(110, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0p65")
theme_override_font_sizes/font_size = 36
text = "99999"
vertical_alignment = 1

[node name="Sep2" type="Control" parent="UI/HUD/InfoBar/M/H"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ControllerTextureRect" type="TextureRect" parent="UI/HUD/InfoBar/M/H"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("7_oh17e")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_onet4")
path = "ui_select"

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD/InfoBar/M/H" groups=["ui_build"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BuildBarSmall" type="HBoxContainer" parent="UI/HUD/InfoBar/M/H" groups=["ui_buildsmall"]]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartBuildMode" type="Button" parent="UI/HUD/InfoBar/M/H/BuildBarSmall"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MaterialIcon" type="Label" parent="UI/HUD/InfoBar/M/H/BuildBarSmall/StartBuildMode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -27.0
offset_right = 25.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7q1i4")
theme_override_font_sizes/font_size = 50
text = "󱔟"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_qcndx")
icon_name = "office-building-outline"
icon_size = 50

[node name="Label" type="Label" parent="UI/HUD/InfoBar/M/H/BuildBarSmall/StartBuildMode"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_m0p65")
text = "BUILD"

[node name="UpgradeBar" type="HBoxContainer" parent="UI/HUD/InfoBar/M/H" groups=["ui_upgrade"]]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Sep" type="Control" parent="UI/HUD/InfoBar/M/H"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="GameControls" type="HBoxContainer" parent="UI/HUD/InfoBar/M/H" groups=["ui_details"]]
layout_mode = 2

[node name="Menu" type="Button" parent="UI/HUD/InfoBar/M/H/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_7q1i4")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_e1lhj")
text = "󰍜"
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_rf8we")
icon_name = "menu"
icon_size = 100

[node name="ControllerTextureRect" type="TextureRect" parent="UI/HUD/InfoBar/M/H/GameControls/Menu"]
show_behind_parent = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("10_6cwio")
expand_mode = 1
script = ExtResource("7_onet4")
path = "ui_menu"

[node name="PausePlay" type="Button" parent="UI/HUD/InfoBar/M/H/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_7q1i4")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_e1lhj")
toggle_mode = true
text = "󰐊"
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_rf8we")
icon_name = "play"
icon_size = 100

[node name="ControllerTextureRect" type="TextureRect" parent="UI/HUD/InfoBar/M/H/GameControls/PausePlay"]
show_behind_parent = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_1ip31")
expand_mode = 1
script = ExtResource("7_onet4")
path = "ui_play"

[node name="SpeedUp" type="Button" parent="UI/HUD/InfoBar/M/H/GameControls"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_7q1i4")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_6qmfo")
text = "󰛒"
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_rf8we")
icon_name = "fast-forward-outline"
icon_size = 100

[node name="ControllerTextureRect" type="TextureRect" parent="UI/HUD/InfoBar/M/H/GameControls/SpeedUp"]
show_behind_parent = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = -12.0
offset_right = 28.0
offset_bottom = 40.0
texture = ExtResource("12_2yvu8")
expand_mode = 1
script = ExtResource("7_onet4")
path = "ui_fastforward"

[node name="Cursor" type="Label" parent="UI/HUD"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 67.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_7q1i4")
theme_override_font_sizes/font_size = 128
text = "󰄱"
justification_flags = 0
script = ExtResource("9_qcndx")
icon_name = "checkbox-blank-outline"
icon_size = 128

[node name="DebugMessage" type="Label" parent="UI"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -24.0
offset_right = 3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
autowrap_mode = 1

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("12_3nie2")

[connection signal="pressed" from="UI/HUD/InfoBar/M/H/BuildBarSmall/StartBuildMode" to="UI" method="_on_start_build_mode_pressed"]
[connection signal="pressed" from="UI/HUD/InfoBar/M/H/GameControls/Menu" to="UI" method="_on_menu_pressed"]
[connection signal="pressed" from="UI/HUD/InfoBar/M/H/GameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/InfoBar/M/H/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
